slurm/logs/slurm-433-yolox_visdrone.out
extracting the dataset from NAS ...
done
/var/spool/slurm/d/job00433/slurm_script: line 22: $'\necho \'setup yolox environment ...\'\npip3 install -v -e .  # or  python3 setup.py develop\necho \'done\'\n': command not found
20221107-232535
Traceback (most recent call last):
  File "/data/happyhoo97/anaconda3/envs/yolox_env/lib/python3.7/runpy.py", line 183, in _run_module_as_main
    mod_name, mod_spec, code = _get_module_details(mod_name, _Error)
  File "/data/happyhoo97/anaconda3/envs/yolox_env/lib/python3.7/runpy.py", line 153, in _get_module_details
    code = loader.get_code(mod_name)
  File "<frozen importlib._bootstrap_external>", line 860, in get_code
  File "<frozen importlib._bootstrap_external>", line 791, in source_to_code
  File "<frozen importlib._bootstrap>", line 219, in _call_with_frames_removed
  File "/data/happyhoo97/repos/YOLOX/tools/eval.py", line 96
    default=False,
          ^
SyntaxError: invalid syntax
done
